Implement PDF download functionality for Control vs Evidence reports and enhance view structure
- Added PDF download capability for Control vs Evidence and Evidence vs Control reports using Mpdf.
- Created new views for PDF generation: EvidenceControlTablePdf.blade.php and pdf.blade.php.
- Updated ControlEvidenceController to handle PDF requests and return appropriate responses.
- Improved the layout and styling of the evidence control tables for better user experience.
- Introduced a new ViewServiceProvider to share organization data across views.

--- a/public/css/report.css
+++ b/public/css/report.css
@@ -49,6 +49,31 @@
     background-color: white;
     color: black;
 }
+.btn-report {
+    background-color: #00fbff;
+    color: black;
+    border-radius: 20px;
+    border: solid #00fbff;
+    transition-duration: 0.3s;
+    font-size: 14px;
+    text-align: center;
+    margin: 0 .2em;
+    text-decoration: none;
+    padding: .2em .5em;
+    font-family: "Roboto", sans-serif;
+}
+
+.btn-report:hover {
+    background-color: white;
+    border: solid 2px black;
+    color: black;
+}
+
+.btn-report p {
+    margin: 0;
+    font-size: 14px;
+}
+
 a.disabled {
     pointer-events: none;
     cursor: none;
