--- a/public/css/report.css
+++ b/public/css/report.css
@@ -63,6 +63,7 @@
     font-family: "Roboto", sans-serif;
     width: auto;
     display: inline-block;
+    line-height: initial;
 }   
 
 .btn-report:hover {
