--- a/public/tailadmin/src/partials/breadcrumb.html
+++ b/public/tailadmin/src/partials/breadcrumb.html
@@ -1,6 +1,6 @@
 <div class="mb-6 flex flex-wrap items-center justify-between gap-3">
   <h2
-    class="text-xl font-semibold text-gray-800 dark:text-white/90"
+    class="text-sm lg:text-xl font-semibold text-gray-800 dark:text-white/90"
     x-text="pageName"
   ></h2>
 
