--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -83,4 +83,16 @@
     padding-right: 0 !important;
 }
 
-/* Add more RTL overrides as needed */
+.select2-container--default .select2-selection--multiple {
+    border-color: #d0d5dd;
+    border-radius: 0.5rem;
+}
+
+.select2-container--default.select2-container--focus
+    .select2-selection--multiple {
+    border-color: #d0d5dd;
+}
+
+.select2-container .select2-selection--multiple {
+    min-height: 44px;
+}
