--- a/public/tailadmin/src/css/style.css
+++ b/public/tailadmin/src/css/style.css
@@ -193,6 +193,10 @@ layer(base);
     }
 }
 
+.select2-selection__choice__display {
+    @apply text-sm text-gray-800;
+}
+
 @utility menu-item {
     @apply text-theme-sm relative flex items-center gap-3 rounded-lg px-3 py-2 font-medium;
 }
