--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -96,3 +96,23 @@
 .select2-container .select2-selection--multiple {
     min-height: 44px;
 }
+
+.ck.ck-content.ck-editor__editable {
+    height: 200px;
+}
+.very-low {
+    background-color: #00b050;
+}
+.low {
+    background-color: #a8d08d;
+}
+.medium {
+    background-color: #ffff00;
+}
+.high {
+    background-color: #ffc000;
+}
+.critical {
+    background-color: #ff0000;
+    color: white;
+}
